# taller-grupal

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  client  config.yaml  install.sh  lobby_client  moc_server  server
Prototipos Fisicas/: fisicas.cpp  fisicas.h
src/: client_eventlistener.cpp  client_eventlistener.h  client_main.cpp  client_protocol.cpp  client_protocol.h  client_updater.cpp  client_updater.h
src/client/: client.cpp  client.h  client_main.cpp  eventlistener.cpp  eventlistener.h  mapper.cpp  mapper.h  protocol.cpp  protocol.h  update_queue.cpp  update_queue.h  updater.cpp  updater.h
src/client/gui/: .gitignore  CMakeLists.txt  entityFactory.cpp  entityFactory.h  entityGame.cpp  entityGame.h  estado_juego.h  gui_loop.cpp  gui_loop.h  main.cpp  map.h  playableCharacter.cpp  playableCharacter.h  render.cpp  render.h  soundManager.cpp  soundManager.h  textureManager.cpp  textureManager.h
src/client/gui/SDL2pp/: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  libSDL2pp.so.8.3.0
src/client/gui/testfiles/: testEntity.cpp  testIntox.cpp  testJazzRunRight.cpp  testJazzStand.cpp  testMap.cpp  testMusic.cpp  testRun.cpp  testRunR.cpp  testStand.cpp  testStandR.cpp
src/client/lobby_client/: main.cpp  mainwindow.h
src/client/matchEndedGui/: .gitignore  CMakeLists.txt  main.cpp  matchended.h  matchendedgui.cpp  matchendedgui.h  matchendedgui.ui
src/client_gui/: .gitignore  CMakeLists.txt  Makefile  estado_juego.h  gui_loop.cpp  gui_loop.h  main.cpp  render.cpp  render.h
src/client_gui/testfiles/: testJazzRunRight.cpp
src/common/: .gitignore  ActionMessage.h  ActionType.h  CMakeLists.txt  Update  Update.cpp  Update.h  dtos.h  lobbyprotocol.h  map.h  socket.cpp  test_update.cpp  thread.h  update.cpp  update_test  updateables.h
src/common/map/: .gitignore  CMakeLists.txt  map.cpp  map.h  outside_map_limits_error.h  readme.md  test.cpp  testmap.yaml  testmap2.yaml
src/editor_niveles/: .gitignore  CMakeLists.txt  editormapa.cpp  editormapa.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  renderizadomapa.cpp  renderizadomapa.h  tiles.qrc
src/editor_niveles/build-editor_niveles-Desktop-Debug/: CMakeCache.txt.prev  cmake_install.cmake  editor_niveles
src/editor_niveles/build-editor_niveles-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-e16608c3b7d209d9c84b.json  cmakeFiles-v1-500193fce772957a6e9a.json  codemodel-v2-8edbbb050ec5deb09eaf.json  index-2024-05-19T19-53-32-0316.json  target-editor_niveles-Debug-880258d03d6dad605280.json
src/editor_niveles/build-editor_niveles-Desktop-Debug/.cmake/api/v1/reply.prev/: codemodel-v2-5d6b4ca4bbbdd766cc86.json  index-2024-05-19T19-53-21-0566.json  target-editor_niveles-Debug-49f89ce68e7644abb96e.json  target-editor_niveles_autogen-Debug-7518eb19f2a2e5476fdc.json
src/editor_niveles/build-editor_niveles-Desktop-Debug/editor_niveles_autogen/: mocs_compilation.cpp
src/lobby_client/: .gitignore  CMakeLists.txt  gui_lobby.h  lobby.cpp  lobby.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_server.cpp  protocololobby.cpp  protocololobby.h
src/lobby_client/lobby_src/: CMakeLists.txt  lobby.cpp  lobby.h  mainwindow.cpp  mainwindow.h  protocololobby.cpp  protocololobby.h
src/lobby_client/lobby_src/socket/: resolvererror.h  socket.cpp  socket.h
src/lobby_client/socket/: conexion_cerrada.h  resolver.h  socket.cpp  socket.h
src/maps/: GranMapa.yaml  MapaEnemigo.yaml  carrotus.yaml  castle.yaml  diamondus.yaml  map3.yaml  testmap.yaml  testmap2.yaml
src/server/: Game.cpp  Game.h  game_pool_monitor.h  server_main.cpp
src/server/clients/: client.cpp  client.h  client_listener.cpp  client_listener.h  client_monitor.cpp  client_monitor.h  protocol.cpp  protocol.h  server_client.cpp  server_client.h
src/server/game/: game_manager.cpp  game_manager.h  lobby_manager.cpp  lobby_protocol.cpp  lobby_protocol.h
src/server/loader/: config.cpp  config.h  config.yaml  config_loader.cpp  config_loader.h
src/server/model/: Bullet.h  Dynamic_entity.h  Enemy.h  Entity.h  Pickup.h  Player.h
src/server/model/constants/: Ammo_data.h  Enemy_data.h  ammo_type.h  game_status.h  pickup_type.h  player_type.h  updateables.h
src/server/physics/: physics.cpp  physics.h
src/textures/sounds/: coin-pickup-98269.mp3:Zone.Identifier
